appId: br.com.peladapedemaisuma.app
name: Login e consulta de partidas e separações
---
- launchApp:
    clearState: true
- tapOn: E-mail
- inputText: ${PLAYER_EMAIL}
- tapOn: Senha
- inputText: ${PLAYER_PASSWORD}
- tapOn: Entrar
- assertVisible: AGENDA E HISTÓRICO
- assertVisible: Times gerados
- swipe:
    direction: DOWN
- assertNotVisible: Nova
